add space complexity (all function and layout)
This patch updated space complexity completely.
each data structure size is used to calculate
total size of memory.

Signed-off-by: BY1994 <lovelychoco100@gmail.com>

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <pre class="body">
     choco@workstation ~ $ ls
     <a href="ASCII.html">ascii_table</a>
+    <a href="space_complexity.html">space_complexity</a>
     choco@workstation ~ $ cat ascii_table
             </pre>
         </div>    
